# cargo-first

./: Cargo.toml
src/: entrypoint.rs  main.rs  processor.rs
